# orq

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  README.md  requirements.txt
.github/workflows/: check-fmt.yml  doxygen.yml  run-3pc-tests.yml
bench/: README.md
bench/micro/: README.md  micro_aggregation.cpp  micro_batching.cpp  micro_boolean_addition.cpp  micro_ccs_radix.cpp  micro_comm_batch.cpp  micro_comm_threads.cpp  micro_join.cpp  micro_merge.cpp  micro_oprf.cpp  micro_permutations.cpp  micro_pooled.cpp  micro_prefix_sum.cpp  micro_primitives.cpp  micro_randomness.cpp  micro_session_gap.cpp  micro_session_threshold.cpp  micro_shuffling.cpp  micro_sort_preprocessing.cpp  micro_sorting.cpp  micro_sorting_rs.cpp  micro_tablesort.cpp  micro_triples.cpp  micro_tumbling.cpp  micro_vector_construction.cpp  micro_vector_mapping.cpp  thread_test.cpp
bench/queries/other/: aspirin.cpp  comorbidity.cpp  credit_score.cpp  custom_agg.cpp  distinct_patients.cpp  market-share.cpp  pwd-reuse.cpp  rcdiff.cpp  secrecy_dbgen.h  secrecy_q2.cpp
bench/queries/secretflow/: sf-q1-mod-obliv.cpp  sf-q1-mod.cpp  sf-q1.cpp  sf-q12-merge.cpp  sf-q12.cpp  sf-q14-merge.cpp  sf-q14.cpp  sf-q6.cpp
bench/queries/tpch/: q1.cpp  q10.cpp  q11.cpp  q12.cpp  q13.cpp  q14.cpp  q15.cpp  q16.cpp  q17.cpp  q18.cpp  q19.cpp  q2.cpp  q20.cpp  q21.cpp  q22.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp  q9.cpp  (+1 more)
benchmarks/primitives/: plot-cmp-exp.py  plot.py
doc/: Doxyfile  conf.py  index.rst
doc/headers/: backend.rst  bench.rst  communication.rst  containers.rst  debug.rst  examples.rst  operators.rst  profiling.rst  protocols.rst  random.rst  tests.rst
docs/: MPI-setup.md  hotspot_flame_graphs.md  join.md  locks.md  protocols.md  shuffle.md  smcql-setup.md  tasks.md  vector-mappings.md
examples/: employees_age_secrets_3pc_0.csv  employees_age_secrets_3pc_1.csv  employees_sorted_age_secrets_3pc_2.csv  ex0_template.cpp  ex1_secret_sharing.cpp  ex2_operators.cpp  ex3_relational.cpp  ex4_wagegap.cpp  ex5_join.cpp  vec_copy.cpp
examples/credit-score/: ex-credit-4pc-share-0.csv  ex-credit-4pc-share-1.csv  ex-credit-4pc-share-2.csv  ex-credit-4pc-share-3.csv  ex-credit-data.csv  ex-credit-share-0.csv  ex-credit-share-1.csv  ex-credit-share-2.csv
examples/medical/: ex-glucose-4pc-share-0.csv  ex-glucose-4pc-share-1.csv  ex-glucose-4pc-share-2.csv  ex-glucose-4pc-share-3.csv  ex-glucose-data-clean.csv  ex-glucose-data-noisy.csv  ex-glucose-share-0.csv  ex-glucose-share-1.csv  ex-glucose-share-2.csv
examples/wagegap/: ex-wagegap-share-0.csv  ex-wagegap-share-1.csv  ex-wagegap-share-2.csv
include/: README.md  mpc.h  orq.h  secrecy.h
include/backend/: README.md  service.h
include/benchmark/: benchmarking.h  data.h  stopwatch.h  thread_profiling.h  utils.h
include/core/: README.md
include/debug/: debug.h  orq_debug.h
include/experiments/: experiments.h  memory.h  operators.h  secure_primitives.h
include/profiling/: README.md  stopwatch.h  thread_profiling.h  utils.h
include/service/: service.h
scripts/: README.md  _setup_libote.sh  _setup_required.sh  _setup_securejoin.sh  _update_hostfile.sh  cluster-wan-sim.sh  comm-experiments.sh  comm-thread-experiments.sh  compare-to.py  compare_communicators.sh  generate-docs.sh  plot_query_experiments.py  primitive-experiments.sh  query-experiments.sh  run_experiment.sh  run_multithreaded_test.sh  setup.sh  utils.sh  wan-sim.py
scripts/comm/: bandwidth-estimate.py  bw-accuracy.py  cluster-wan-sim.sh  comm-experiments.sh  comm-thread-experiments.sh  compare_communicators.sh  wan-sim.py
scripts/old-paper/: bw-accuracy.py  plot-query-breakdown.py  plot-row-threads.py  plot-scaling.py  plot-secretflow-comparison.py  plot-threading.py  query-cm-scaling.py  query-cost-model.sh  secrecy-bw-comp.sh  secrecy-comparison.py  secretflow-queries-comparison.py  sort-graphs.py  sort.py  table_sort.py  threading-experiments.sh
scripts/orchestration/: chameleon-orch-template.yml  deploy.sh
scripts/permutation-correlations/: build-securejoin.sh  preprocess_permcorrs.py
scripts/plot/: plot-multithreaded.py  plot_geowan_experiments.py  plot_query_experiments.py  plot_sorting.py  sort.py  table_sort.py
scripts/profiling/: flamegraph.sh  primitive-experiments.sh  threading-experiments.sh
scripts/sosp25/: README.md  artifact-tpch.sh  generate-plots.sh
scripts/sosp25-replication/: README.md  artifact-tpch.sh  generate-plots.sh
scripts/testing/: run_multithreaded_test.sh
src/dev/: 3pc.cpp  benchmark_grpc_3pc.cpp  benchmark_memory.cpp  benchmark_mpi_2pc.cpp  benchmark_mpi_3pc.cpp  benchmark_mpi_4pc.cpp
src/examples/: example1.cpp  example2.cpp
src/micro/: micro_aggregation.cpp  micro_bit_compress.cpp  micro_boolean_addition.cpp  micro_ccs_radix.cpp  micro_comm_batch.cpp  micro_comm_threads.cpp  micro_join.cpp  micro_merge.cpp  micro_oprf.cpp  micro_permutations.cpp  micro_pooled.cpp  micro_prefix_sum.cpp  micro_primitives.cpp  micro_randomness.cpp  micro_session_gap.cpp  micro_session_threshold.cpp  micro_shuffling.cpp  micro_sort_preprocessing.cpp  micro_sorting.cpp  micro_sorting_rs.cpp  micro_tablesort.cpp  micro_triples.cpp  micro_tumbling.cpp  micro_vector_construction.cpp  micro_vector_mapping.cpp  thread_test.cpp
src/queries/: cloud.cpp  demo_wagegap.cpp  energy.cpp  medical.cpp  tables_io.cpp  waldo_energy_query.cpp  waldo_table_equality.cpp  waldo_table_greater.cpp
tests/: test_bitonic_sort.cpp  test_communication.cpp  test_comparisons.cpp  test_computation_library.cpp  test_correlated.cpp  test_count_wrong_div.cpp  test_fixed_point.cpp  test_io.cpp  test_join.cpp  test_libote.cpp  test_malicious.cpp  test_operators.cpp  test_pooled.cpp  test_primitives.cpp  test_randomness.cpp  test_runtime.cpp  test_securejoin.cpp  test_shuffle.cpp  test_sorting.cpp  test_table_operators.cpp  util.h
tests/data/: employees.csv  employees_age_secrets_3pc_2.csv  employees_secrets_3pc_0.csv  employees_secrets_3pc_1.csv  employees_secrets_3pc_2.csv  employees_sorted_age_secrets_3pc_0.csv  employees_sorted_age_secrets_3pc_1.csv
(+413 files in other folders)
